--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <nav>
             <ul class=navbar>
                 <li class=navbar><a href="home.html" class=navbar>Home</a></li> 
-                <li class=navbar><a href="Links.html" class=navbar>My Links</a></li>
-                <li class=navbar><a href="FAQ.html" class=navbar>FAQ's</a></li>
+                <li class=navbar><a href="HTML/Links.html" class=navbar>My Links</a></li>
+                <li class=navbar><a href="HTML/FAQ.html" class=navbar>FAQ's</a></li>
                 <br>
             </ul>
         </nav>
